miniav_ffi/lib/miniav_ffi_bindings.dart


  static MiniAVResultCode fromValue(int value) => switch (value) {
    0 => MINIAV_SUCCESS,
    -1 => MINIAV_ERROR_UNKNOWN,
    -2 => MINIAV_ERROR_INVALID_ARG,
    -3 => MINIAV_ERROR_NOT_INITIALIZED,
    -4 => MINIAV_ERROR_SYSTEM_CALL_FAILED,
    -5 => MINIAV_ERROR_NOT_SUPPORTED,
    -6 => MINIAV_ERROR_BUFFER_TOO_SMALL,
    -7 => MINIAV_ERROR_INVALID_HANDLE,
    -8 => MINIAV_ERROR_DEVICE_NOT_FOUND,
    -9 => MINIAV_ERROR_DEVICE_BUSY,
    -10 => MINIAV_ERROR_ALREADY_RUNNING,
    -11 => MINIAV_ERROR_NOT_RUNNING,
    -12 => MINIAV_ERROR_OUT_OF_MEMORY,
    -13 => MINIAV_ERROR_TIMEOUT,
    -14 => MINIAV_ERROR_DEVICE_LOST,
    -15 => MINIAV_ERROR_FORMAT_NOT_SUPPORTED,
    -16 => MINIAV_ERROR_INVALID_OPERATION,
    -17 => MINIAV_ERROR_NOT_IMPLEMENTED,
    -18 => MINIAV_ERROR_NOT_CONFIGURED,
    -19 => MINIAV_ERROR_PORTAL_FAILED,
    -20 => MINIAV_ERROR_STREAM_FAILED,
    -21 => MINIAV_ERROR_PORTAL_CLOSED,
    -22 => MINIAV_ERROR_USER_CANCELLED,
    -23 => MINIAV_ERROR_PERMISSION_DENIED,
    _ => throw ArgumentError('Unknown value for MiniAVResultCode: $value'),
  };
}

final class MiniAVDeviceInfo extends ffi.Struct {
  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> device_id;

  @ffi.Array.multi([256])
  external ffi.Array<ffi.Char> name;

  @ffi.Bool()
  external bool is_default;
}

enum MiniAVPixelFormat {
  MINIAV_PIXEL_FORMAT_UNKNOWN(0),
  MINIAV_PIXEL_FORMAT_RGB24(1),
  MINIAV_PIXEL_FORMAT_BGR24(2),
  MINIAV_PIXEL_FORMAT_RGBA32(3),
  MINIAV_PIXEL_FORMAT_BGRA32(4),
  MINIAV_PIXEL_FORMAT_ARGB32(5),
  MINIAV_PIXEL_FORMAT_ABGR32(6),
  MINIAV_PIXEL_FORMAT_RGBX32(7),
  MINIAV_PIXEL_FORMAT_BGRX32(8),
  MINIAV_PIXEL_FORMAT_XRGB32(9),
  MINIAV_PIXEL_FORMAT_XBGR32(10),
  MINIAV_PIXEL_FORMAT_I420(11),
  MINIAV_PIXEL_FORMAT_YV12(12),
  MINIAV_PIXEL_FORMAT_NV12(13),
  MINIAV_PIXEL_FORMAT_NV21(14),
  MINIAV_PIXEL_FORMAT_YUY2(15),
  MINIAV_PIXEL_FORMAT_UYVY(16),
  MINIAV_PIXEL_FORMAT_RGB30(17),
  MINIAV_PIXEL_FORMAT_RGB48(18),
  MINIAV_PIXEL_FORMAT_RGBA64(19),
  MINIAV_PIXEL_FORMAT_RGBA64_HALF(20),
  MINIAV_PIXEL_FORMAT_RGBA128_FLOAT(21),
  MINIAV_PIXEL_FORMAT_YUV420_10BIT(22),
  MINIAV_PIXEL_FORMAT_YUV422_10BIT(23),
  MINIAV_PIXEL_FORMAT_YUV444_10BIT(24),
  MINIAV_PIXEL_FORMAT_GRAY8(25),
  MINIAV_PIXEL_FORMAT_GRAY16(26),
  MINIAV_PIXEL_FORMAT_BAYER_GRBG8(27),
  MINIAV_PIXEL_FORMAT_BAYER_RGGB8(28),
  MINIAV_PIXEL_FORMAT_BAYER_BGGR8(29),
  MINIAV_PIXEL_FORMAT_BAYER_GBRG8(30),
  MINIAV_PIXEL_FORMAT_BAYER_GRBG16(31),
  MINIAV_PIXEL_FORMAT_BAYER_RGGB16(32),
  MINIAV_PIXEL_FORMAT_BAYER_BGGR16(33),
  MINIAV_PIXEL_FORMAT_BAYER_GBRG16(34),
  MINIAV_PIXEL_FORMAT_MJPEG(35),
  MINIAV_PIXEL_FORMAT_COUNT(36);

  final int value;
  const MiniAVPixelFormat(this.value);

  static MiniAVPixelFormat fromValue(int value) => switch (value) {
    0 => MINIAV_PIXEL_FORMAT_UNKNOWN,
    1 => MINIAV_PIXEL_FORMAT_RGB24,
    2 => MINIAV_PIXEL_FORMAT_BGR24,
    3 => MINIAV_PIXEL_FORMAT_RGBA32,
    4 => MINIAV_PIXEL_FORMAT_BGRA32,
    5 => MINIAV_PIXEL_FORMAT_ARGB32,
    6 => MINIAV_PIXEL_FORMAT_ABGR32,
    7 => MINIAV_PIXEL_FORMAT_RGBX32,
    8 => MINIAV_PIXEL_FORMAT_BGRX32,
    9 => MINIAV_PIXEL_FORMAT_XRGB32,
    10 => MINIAV_PIXEL_FORMAT_XBGR32,
    11 => MINIAV_PIXEL_FORMAT_I420,
    12 => MINIAV_PIXEL_FORMAT_YV12,
    13 => MINIAV_PIXEL_FORMAT_NV12,
    14 => MINIAV_PIXEL_FORMAT_NV21,
    15 => MINIAV_PIXEL_FORMAT_YUY2,
    16 => MINIAV_PIXEL_FORMAT_UYVY,
    17 => MINIAV_PIXEL_FORMAT_RGB30,
    18 => MINIAV_PIXEL_FORMAT_RGB48,
    19 => MINIAV_PIXEL_FORMAT_RGBA64,
    20 => MINIAV_PIXEL_FORMAT_RGBA64_HALF,
    21 => MINIAV_PIXEL_FORMAT_RGBA128_FLOAT,
    22 => MINIAV_PIXEL_FORMAT_YUV420_10BIT,
    23 => MINIAV_PIXEL_FORMAT_YUV422_10BIT,
    24 => MINIAV_PIXEL_FORMAT_YUV444_10BIT,
    25 => MINIAV_PIXEL_FORMAT_GRAY8,
    26 => MINIAV_PIXEL_FORMAT_GRAY16,
    27 => MINIAV_PIXEL_FORMAT_BAYER_GRBG8,
    28 => MINIAV_PIXEL_FORMAT_BAYER_RGGB8,
    29 => MINIAV_PIXEL_FORMAT_BAYER_BGGR8,
    30 => MINIAV_PIXEL_FORMAT_BAYER_GBRG8,
    31 => MINIAV_PIXEL_FORMAT_BAYER_GRBG16,
    32 => MINIAV_PIXEL_FORMAT_BAYER_RGGB16,
    33 => MINIAV_PIXEL_FORMAT_BAYER_BGGR16,
    34 => MINIAV_PIXEL_FORMAT_BAYER_GBRG16,
    35 => MINIAV_PIXEL_FORMAT_MJPEG,
    36 => MINIAV_PIXEL_FORMAT_COUNT,
    _ => throw ArgumentError('Unknown value for MiniAVPixelFormat: $value'),
  };
}

enum MiniAVAudioFormat {
  MINIAV_AUDIO_FORMAT_UNKNOWN(0),
  MINIAV_AUDIO_FORMAT_U8(1),
  MINIAV_AUDIO_FORMAT_S16(2),
  MINIAV_AUDIO_FORMAT_S32(3),
  MINIAV_AUDIO_FORMAT_F32(4),
  MINIAV_AUDIO_FORMAT_F64(5);

  final int value;
  const MiniAVAudioFormat(this.value);

  static MiniAVAudioFormat fromValue(int value) => switch (value) {
    0 => MINIAV_AUDIO_FORMAT_UNKNOWN,
    1 => MINIAV_AUDIO_FORMAT_U8,
    2 => MINIAV_AUDIO_FORMAT_S16,
    3 => MINIAV_AUDIO_FORMAT_S32,
    4 => MINIAV_AUDIO_FORMAT_F32,
    5 => MINIAV_AUDIO_FORMAT_F64,
    _ => throw ArgumentError('Unknown value for MiniAVAudioFormat: $value'),
  };
}

enum MiniAVCaptureType {
  MINIAV_CAPTURE_TYPE_DISPLAY(0),
  MINIAV_CAPTURE_TYPE_WINDOW(1),
  MINIAV_CAPTURE_TYPE_REGION(2);

  final int value;
  const MiniAVCaptureType(this.value);

  static MiniAVCaptureType fromValue(int value) => switch (value) {
    0 => MINIAV_CAPTURE_TYPE_DISPLAY,
    1 => MINIAV_CAPTURE_TYPE_WINDOW,
    2 => MINIAV_CAPTURE_TYPE_REGION,
    _ => throw ArgumentError('Unknown value for MiniAVCaptureType: $value'),
  };
}

enum MiniAVOutputPreference {
  MINIAV_OUTPUT_PREFERENCE_CPU(0),
  MINIAV_OUTPUT_PREFERENCE_GPU(1);

  final int value;
  const MiniAVOutputPreference(this.value);

  static MiniAVOutputPreference fromValue(int value) => switch (value) {
    0 => MINIAV_OUTPUT_PREFERENCE_CPU,
    1 => MINIAV_OUTPUT_PREFERENCE_GPU,
    _ => throw ArgumentError(
      'Unknown value for MiniAVOutputPreference: $value',
    ),
  };
}

final class MiniAVVideoInfo extends ffi.Struct {
  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.UnsignedInt()
  external int pixel_formatAsInt;

  MiniAVPixelFormat get pixel_format =>
      MiniAVPixelFormat.fromValue(pixel_formatAsInt);

  @ffi.Uint32()
  external int frame_rate_numerator;

  @ffi.Uint32()
  external int frame_rate_denominator;

  @ffi.UnsignedInt()
  external int output_preferenceAsInt;

  MiniAVOutputPreference get output_preference =>
      MiniAVOutputPreference.fromValue(output_preferenceAsInt);
}

final class MiniAVAudioInfo extends ffi.Struct {
  @ffi.UnsignedInt()
  external int formatAsInt;

  MiniAVAudioFormat get format => MiniAVAudioFormat.fromValue(formatAsInt);

  @ffi.Uint32()
  external int sample_rate;

  @ffi.Uint8()
  external int channels;

  @ffi.Uint32()
  external int num_frames;
}

enum MiniAVLoopbackTargetType {
  MINIAV_LOOPBACK_TARGET_NONE(0),
  MINIAV_LOOPBACK_TARGET_SYSTEM_AUDIO(1),
  MINIAV_LOOPBACK_TARGET_PROCESS(2),
  MINIAV_LOOPBACK_TARGET_WINDOW(3);

  final int value;
  const MiniAVLoopbackTargetType(this.value);

  static MiniAVLoopbackTargetType fromValue(int value) => switch (value) {
    0 => MINIAV_LOOPBACK_TARGET_NONE,
    1 => MINIAV_LOOPBACK_TARGET_SYSTEM_AUDIO,
    2 => MINIAV_LOOPBACK_TARGET_PROCESS,
    3 => MINIAV_LOOPBACK_TARGET_WINDOW,
    _ => throw ArgumentError(
      'Unknown value for MiniAVLoopbackTargetType: $value',
    ),
  };
}

final class UnnamedUnion1 extends ffi.Union {
  @ffi.Uint32()
  external int process_id;

  external ffi.Pointer<ffi.Void> window_handle;
}

final class MiniAVLoopbackTargetInfo extends ffi.Struct {
  @ffi.UnsignedInt()
  external int typeAsInt;

  MiniAVLoopbackTargetType get type =>
      MiniAVLoopbackTargetType.fromValue(typeAsInt);

  external UnnamedUnion1 TARGETHANDLE;
}

final class MiniAVCameraContext extends ffi.Opaque {}

typedef MiniAVCameraContextHandle = ffi.Pointer<MiniAVCameraContext>;

final class MiniAVScreenContext extends ffi.Opaque {}

typedef MiniAVScreenContextHandle = ffi.Pointer<MiniAVScreenContext>;

final class MiniAVAudioContext extends ffi.Opaque {}

typedef MiniAVAudioContextHandle = ffi.Pointer<MiniAVAudioContext>;

final class MiniAVLoopbackContext extends ffi.Opaque {}

typedef MiniAVLoopbackContextHandle = ffi.Pointer<MiniAVLoopbackContext>;

final class MiniAVInputContext extends ffi.Opaque {}

typedef MiniAVInputContextHandle = ffi.Pointer<MiniAVInputContext>;

final class MiniAVInjectContext extends ffi.Opaque {}

typedef MiniAVInjectContextHandle = ffi.Pointer<MiniAVInjectContext>;

enum MiniAVInputType {
  MINIAV_INPUT_TYPE_KEYBOARD(1),
  MINIAV_INPUT_TYPE_MOUSE(2),
  MINIAV_INPUT_TYPE_GAMEPAD(4);

  final int value;
  const MiniAVInputType(this.value);

  static MiniAVInputType fromValue(int value) => switch (value) {
    1 => MINIAV_INPUT_TYPE_KEYBOARD,
    2 => MINIAV_INPUT_TYPE_MOUSE,
    4 => MINIAV_INPUT_TYPE_GAMEPAD,
    _ => throw ArgumentError('Unknown value for MiniAVInputType: $value'),
  };
}

enum MiniAVKeyAction {
  MINIAV_KEY_ACTION_DOWN(0),
  MINIAV_KEY_ACTION_UP(1);

  final int value;
  const MiniAVKeyAction(this.value);

  static MiniAVKeyAction fromValue(int value) => switch (value) {
    0 => MINIAV_KEY_ACTION_DOWN,
    1 => MINIAV_KEY_ACTION_UP,
    _ => throw ArgumentError('Unknown value for MiniAVKeyAction: $value'),
  };
}

enum MiniAVMouseAction {
  MINIAV_MOUSE_ACTION_MOVE(0),
  MINIAV_MOUSE_ACTION_BUTTON_DOWN(1),
  MINIAV_MOUSE_ACTION_BUTTON_UP(2),
  MINIAV_MOUSE_ACTION_WHEEL(3);

  final int value;
  const MiniAVMouseAction(this.value);

  static MiniAVMouseAction fromValue(int value) => switch (value) {
    0 => MINIAV_MOUSE_ACTION_MOVE,
    1 => MINIAV_MOUSE_ACTION_BUTTON_DOWN,
    2 => MINIAV_MOUSE_ACTION_BUTTON_UP,
    3 => MINIAV_MOUSE_ACTION_WHEEL,
    _ => throw ArgumentError('Unknown value for MiniAVMouseAction: $value'),
  };
}

enum MiniAVMouseButton {
  MINIAV_MOUSE_BUTTON_NONE(0),
  MINIAV_MOUSE_BUTTON_LEFT(1),
  MINIAV_MOUSE_BUTTON_RIGHT(2),
  MINIAV_MOUSE_BUTTON_MIDDLE(3),
  MINIAV_MOUSE_BUTTON_X1(4),
  MINIAV_MOUSE_BUTTON_X2(5);

  final int value;
  const MiniAVMouseButton(this.value);

  static MiniAVMouseButton fromValue(int value) => switch (value) {
    0 => MINIAV_MOUSE_BUTTON_NONE,
    1 => MINIAV_MOUSE_BUTTON_LEFT,
    2 => MINIAV_MOUSE_BUTTON_RIGHT,
    3 => MINIAV_MOUSE_BUTTON_MIDDLE,
    4 => MINIAV_MOUSE_BUTTON_X1,
    5 => MINIAV_MOUSE_BUTTON_X2,
    _ => throw ArgumentError('Unknown value for MiniAVMouseButton: $value'),
  };
}

final class MiniAVKeyboardEvent extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp_us;

  @ffi.Uint32()
  external int key_code;

  @ffi.Uint32()
  external int scan_code;

  @ffi.UnsignedInt()
  external int actionAsInt;

  MiniAVKeyAction get action => MiniAVKeyAction.fromValue(actionAsInt);
}

final class MiniAVMouseEvent extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp_us;

  @ffi.Int32()
  external int x;

  @ffi.Int32()
  external int y;

  @ffi.Int32()
  external int delta_x;

  @ffi.Int32()
  external int delta_y;

  @ffi.Int32()
  external int wheel_delta;

  @ffi.Int32()
  external int wheel_delta_x;

  @ffi.UnsignedInt()
  external int actionAsInt;

  MiniAVMouseAction get action => MiniAVMouseAction.fromValue(actionAsInt);

  @ffi.UnsignedInt()
  external int buttonAsInt;

  MiniAVMouseButton get button => MiniAVMouseButton.fromValue(buttonAsInt);

  @ffi.Bool()
  external bool is_absolute;
}

final class MiniAVGamepadEvent extends ffi.Struct {
  @ffi.Uint64()
  external int timestamp_us;

  @ffi.Uint32()
  external int gamepad_index;

  @ffi.Uint16()
  external int buttons;

  @ffi.Int16()
  external int left_stick_x;

  @ffi.Int16()
  external int left_stick_y;

  @ffi.Int16()
  external int right_stick_x;

  @ffi.Int16()
  external int right_stick_y;

  @ffi.Uint8()
  external int left_trigger;

  @ffi.Uint8()
  external int right_trigger;

  @ffi.Bool()
  external bool connected;
}
